# maivn

./: .env.example  CHANGELOG.md  DEPLOYMENT.md  NOTICE  README.md  RUNBOOK.md  THIRD_PARTY_LICENSES.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  notify-portal.yml  publish-pypi.yml
docs/: best-practices.md  troubleshooting.md
docs/api/: README.md  agent.md  client.md  configuration.md  decorators.md  events.md  logging.md  mcp.md  messages.md  scheduling.md  session-config.md  swarm.md
docs/examples/: README.md  agents-and-tools.md  basics.md  batch-and-scheduling.md  interrupts.md  mcp.md  memory.md  private-data.md  projects.md  swarms.md
docs/guides/: api-keys-webhooks.md  billing-and-usage.md  dependencies.md  frontend-event-bridges.md  frontend-events.md  getting-started.md  maivn-studio-authoring-and-debugging.md  maivn-studio.md  memory-and-recall.md  multi-agent.md  portal-authentication.md  portal-memory-management.md  private-data.md  scheduled-invocation.md  sdk-resource-management.md  structured-output.md  system-tools.md  tools.md  workspace-operations.md
scripts/: oss_license_audit.py  release_guard.py
src/maivn/: __init__.py  __version__.py  cli.py  constants.py  logging.py
src/maivn/_internal/adapters/: __init__.py
src/maivn/_internal/adapters/networking/: __init__.py  http_client.py  sse_client.py
src/maivn/_internal/adapters/repositories/: __init__.py  agent_repo.py  dependency_repo.py  tool_repo.py
src/maivn/_internal/api/: __init__.py  async_stream.py  resource_models.py
src/maivn/_internal/api/agent/: __init__.py  agent.py  client_cache.py  hooks.py  invocation_helpers.py  invocation_methods.py  invocation_state.py
src/maivn/_internal/api/base_scope/: __init__.py  batch.py  builders.py  mcp.py  memory.py  normalization.py  redaction.py  runtime.py  scheduling.py  scope.py  tooling.py  validation.py
src/maivn/_internal/api/client/: __init__.py  client.py  http.py  memory.py
src/maivn/_internal/api/mcp/: __init__.py  auto.py  clients.py  retry.py  server.py  tools.py
src/maivn/_internal/api/scheduling/: __init__.py  builder.py  jitter.py  job.py  models.py  registry.py  retry.py  schedule.py
src/maivn/_internal/api/swarm/: __init__.py  invocation_methods.py  member.py  metadata.py  swarm.py  validation.py
src/maivn/_internal/core/: __init__.py  application_init.py  domain_init.py  exceptions.py
src/maivn/_internal/core/application_services/: __init__.py  config_helpers.py  constants.py
src/maivn/_internal/core/entities/: __init__.py  execution_context.py  session_endpoints.py  sse_event.py  state_compilation_config.py  tool_events.py  tool_spec_registry.py
src/maivn/_internal/core/interfaces/: __init__.py  orchestrator_protocol.py  resolvers.py  sse_client.py  tool_executor.py  tool_specs.py
src/maivn/_internal/utils/: __init__.py  decorators.py  env_parsing.py  infrastructure_init.py
src/maivn/events/: __init__.py  _forward.py  _models.py  fastapi.py
src/maivn/events/_bridge/: __init__.py  bridge.py  dedup.py  emitters.py  queueing.py  registry.py  schema.py  security.py  serialization.py  streaming.py  ui_event.py
src/maivn/events/_forwarding/: __init__.py  bridge.py  payload.py  reporter.py  state.py
src/maivn/events/_normalize/: __init__.py  assistant_events.py  context.py  handlers.py  helpers.py  lifecycle_events.py  stream.py  system_events.py  tool_events.py  tooling.py
src/maivn/messages/: __init__.py
tests/: conftest.py
tests/application/: test_agent_execution_service.py  test_agent_tool_registration.py  test_cli.py  test_client_timeout_precedence.py  test_configuration.py  test_configuration_builder.py  test_decorators.py  test_dependency_collector.py  test_dependency_execution_service.py  test_dependency_execution_service_input_handler.py  test_dependency_resolver.py  test_dependency_updates.py  test_dynamic_tool_factory.py  test_env_parsing.py  test_event_bridge.py  test_event_bridge_concurrency.py  test_event_bridge_hardening.py  test_event_consumption_coordinator.py  test_event_forwarding.py  test_event_forwarding_dispatcher.py  test_event_handlers.py  test_event_invocation_builder.py  test_event_payload_builders.py  test_event_router_reporter.py  test_event_stream_processor.py  test_events_fastapi.py  test_exceptions.py  test_hook_event_emission.py  test_http_client_adapter.py  test_http_client_service_retries.py  test_interrupt_service.py  test_mcp_stdio_integration.py  test_mcp_stdio_timeout.py  test_orchestrator_builder.py  test_orchestrator_invoke_end_to_end.py  test_orchestrator_reporter_hooks.py  test_public_events.py  test_public_exports.py  test_pydantic_deserializer.py  test_repositories.py  (+15 more)
tests/application/logging/: test_sdk_logger.py
tests/application/orchestrators/: test_agent_orchestrator_background_execution.py  test_agent_orchestrator_timeouts.py  test_orchestrator_builder_services.py  test_orchestrator_helpers.py
tests/application/orchestrators/services/: test_agent_client_cache_keying.py  test_background_execution_toggle.py  test_dynamic_tool_factory_extract_agent_response.py  test_event_stream_processor_tool_payload.py  test_interrupt_handler.py  test_rich_reporter_system_tool_streaming.py  test_simple_reporter_streaming.py  test_sse_client_multiline_data.py  test_tool_event_dispatcher.py  test_tool_execution_orchestrator_context.py  test_tool_execution_service.py
tests/application/scheduling/: test_jitter.py  test_job_lifecycle.py  test_retry.py  test_schedule.py
tests/application/scopes/: test_swarm_validation.py
tests/application/services/: test_agent_execution_service_branches.py  test_interrupt_service_branches.py
tests/domain/registrars/: test_registrars.py
tests/domain/services/: test_dependency_services.py  test_toolify_builder_dependencies.py
tests/domain/tool_specs/: test_dependency_detector.py  test_dependency_extractor.py  test_factory.py  test_model_discovery.py  test_schema_builder.py  test_schema_processors.py  test_tool_flattener.py  test_type_utils.py
tests/domain/utils/: test_dependency_utils.py
(+161 files in other folders)
