[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn"
dynamic = ["version"]
description = "Maivn Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chad Heathcote" }]
keywords = ["sdk", "maivn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]

dependencies = [
    "docstring-parser>=0.17.0",
    "maivn-shared>=0.1.0,<0.2.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "tzlocal>=5.3.1",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
studio = ["maivn-studio>=0.1.0,<0.2.0"]

[dependency-groups]
dev = ["ruff>=0.14.14,<1", "pytest>=9.0.2", "pyright>=1.1.408"]

[project.scripts]
maivn = "maivn.cli:main"

[tool.hatch.version]
path = "src/maivn/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maivn"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
omit = [
    "src/maivn/_internal/utils/reporting/*",
    "src/maivn/_internal/utils/reporting/**",
    "src/maivn/_internal/api/mcp.py",
    "src/maivn/_internal/api/mcp_auto.py",
    "src/maivn/_internal/api/mcp_tools.py",
    "src/maivn/_internal/api/base_scope_mcp.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
