[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn"
dynamic = ["version"]
description = "mAIvn Python SDK for building agentic systems with typed tools and dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Chad Heathcote", email = "developer@maivn.io" }]
keywords = ["sdk", "maivn", "ai", "agents", "llm", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # SDK runtime
    "croniter>=2.0.1",
    "docstring-parser>=0.17.0",
    "maivn-shared>=0.2.0,<0.3.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "rich>=14.3.4",
    "tzlocal>=5.3.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
studio = ["maivn-studio>=0.2.0,<0.3.0"]
# Drop-in FastAPI/Starlette adapter for streaming bridge events to a
# frontend. Both deps are MIT-licensed (fully OSI-approved).
fastapi = ["fastapi>=0.136.1", "sse-starlette>=2.1.3"]

[project.urls]
Homepage = "https://maivn.io"
Documentation = "https://github.com/mAIvn-developer/maivn/tree/master/docs"
Repository = "https://github.com/mAIvn-developer/maivn"
Issues = "https://github.com/mAIvn-developer/maivn/issues"
Changelog = "https://github.com/mAIvn-developer/maivn/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12,<1",
    "sse-starlette>=2.1.3",
]

[project.scripts]
maivn = "maivn.cli:main"

[tool.hatch.version]
path = "src/maivn/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maivn"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true

[tool.coverage.run]
omit = [
    "src/maivn/_internal/utils/reporting/*",
    "src/maivn/_internal/utils/reporting/**",
    "src/maivn/_internal/api/mcp.py",
    "src/maivn/_internal/api/mcp_auto.py",
    "src/maivn/_internal/api/mcp_tools.py",
    "src/maivn/_internal/api/base_scope_mcp.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
